chore: fixed weight issue on ios

--- a/src/styles/config/fonts.scss
+++ b/src/styles/config/fonts.scss
@@ -7,14 +7,14 @@
 
 @font-face {
   font-family: "PublicSans-Bold";
-  font-style: normal;
-  font-weight: normal;
+  font-style: bold;
+  font-weight: bold;
   src: url("../../fonts/PublicSans-Bold.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "PublicSans-ExtraBold";
-  font-style: normal;
-  font-weight: normal;
+  font-style: bold;
+  font-weight: bold;
   src: url("../../fonts/PublicSans-ExtraBold.woff2") format("woff2");
 }
